added password reset api
